Ordered list of 3 recipes in homepage
Convert the recipe links to an ordered list so that they will appear in
a vertical sequence.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html">Lasagna</a>
+        <ul>
+            <li>
+                <a href="./recipes/lasagna.html">Lasagna</a>
+            </li>
+            <li>
+                <a href="./recipes/flank-steak.html">Marinated Flank Steak</a>
+            </li>
+            <li>
+                <a href="./recipes/basic-burger.html">Basic Burger</a>
+            </li>
+        </ul>
     </body>
 </html>
