Include a gif to the homepage
Include a gif to a homepage to help the context of the contents.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <img src="https://media0.giphy.com/media/3ohs4lXjuQeKPWGdGM/giphy.gif" alt="A cartoonish gif showing a sauteing pan in motion" width="200">
         <ul>
             <li>
                 <a href="./recipes/lasagna.html">Lasagna</a>
