--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <img src="https://media0.giphy.com/media/3ohs4lXjuQeKPWGdGM/giphy.gif" alt="A cartoonish gif showing a sauteing pan in motion" width="200">
+        <img src="https://thumbs.dreamstime.com/b/colourful-various-herbs-spices-cooking-dark-background-herbs-spices-cooking-dark-background-113655482.jpg" alt="A cartoonish gif showing a sauteing pan in motion" width="300">
         <ul>
             <li>
                 <a href="./recipes/lasagna.html">Lasagna</a>
