Add basic CSS Styling to all pages
Change the font family & background colour for all pages. Change the header colour to TEAL. Standardize image resolution to 400px default width.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="homepage header">Odin Recipes</h1>
         <img src="https://thumbs.dreamstime.com/b/colourful-various-herbs-spices-cooking-dark-background-herbs-spices-cooking-dark-background-113655482.jpg" alt="A cartoonish gif showing a sauteing pan in motion" width="300">
         <ul>
             <li>
