--- a/recipes/flank-steak.html
+++ b/recipes/flank-steak.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>Flank Steak Recipe</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <h1>Marinated Flank Steak Recipe</h1>
+        <h1 class="page header">Marinated Flank Steak Recipe</h1>
             <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2F5bc2b6b469912dc55670f638d981ce79%2F166603518420620210118_192206.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Picture of Flank Steak on a plate">
-            <h3>Description</h3>
+            <h3 class="sub header">Description</h3>
                 <p>
                     Flank steak is a lean cut of beef that comes from the cow's lower abdominal muscles. It's a relatively tough cut that's low in fat, which means a few things: Flank steak doesn't need to be trimmed, it's inexpensive compared to other cuts, and it benefits greatly from marination. You'll find a detailed ingredient list and step-by-step instructions in the recipe below.
                 </p>
-            <h3>Ingredients</h3>
+            <h3 class="sub header">Ingredients</h3>
                 <ul>
                     <li>1 (1 1/2-pound) flank steak</li>
                     <li>½ cup vegetable oil</li> 
@@ -23,7 +24,7 @@
                     <li>2 cloves garlic, minced</li>
                     <li>½ teaspoon ground black pepper</li>
                 </ul>
-            <h3>Steps</h3>
+            <h3 class="sub header">Steps</h3>
                 <ol>
                     <li>
                         Whisk together oil, soy sauce, vinegar, lemon juice, Worcestershire sauce, Dijon mustard, garlic, and pepper for marinade in a 9x13-inch glass baking dish until thoroughly combined.
@@ -44,6 +45,6 @@
                         Remove from the grill and let rest for 5 minutes before slicing and serving.
                     </li>
                 </ol>
-        <a href="../index.html">Home</a>        
+        <a class="back-button" href="../index.html">Home</a>        
     </body>
 </html>
