--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>Lasagna Recipe</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <h1>Lasagna Recipe</h1>
+        <h1 class="page header">Lasagna Recipe</h1>
             <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2Feaf2a87ca2376e9dca53110c86de9d30%2F167101884729520221213_195440.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Picture of Lasagna in a baking tray">
-            <h3>Description</h3>
+            <h3 class="sub header">Description</h3>
                 <p>
                     Making lasagna can be time-consuming, but the results are <em>well</em> worth the wait. You'll find a detailed ingredient list and step-by-step instructions in the recipe below.
                 </p>
-            <h3>Ingredients</h3>
+            <h3 class="sub header">Ingredients</h3>
                 <ul>
                     <li>1 pound sweet Italian sausage</li>
                     <li>¾ pound lean ground beef</li> 
@@ -34,7 +35,7 @@
                     <li>¾ pound mozzarella cheese, sliced</li> 
                     <li>¾ cup grated Parmesan cheese</li>
                 </ul>
-            <h3>Steps</h3>
+            <h3 class="sub header">Steps</h3>
                 <ol>
                     <li>
                         Cook sausage, ground beef, onion, and garlic in a Dutch oven over medium heat until well browned. Stir in crushed tomatoes, tomato sauce, tomato paste, and water. Season with sugar, 2 tablespoons parsley, basil, 1 teaspoon salt, Italian seasoning, fennel seeds, and pepper. Simmer, covered, for about 1 1/2 hours, stirring occasionally.
@@ -52,6 +53,6 @@
                         Bake in the preheated oven for 25 minutes. Remove the foil and bake for an additional 25 minutes. Rest lasagna for 15 minutes before serving.
                     </li>
                 </ol>
-        <a href="../index.html">Home</a>        
+        <a class="back-button" href="../index.html">Home</a>        
     </body>
 </html>
